Fix: 100vh error on mobile

--- a/src/modules/Search/SearchOverlay/SearchOverlay.module.scss
+++ b/src/modules/Search/SearchOverlay/SearchOverlay.module.scss
@@ -19,6 +19,12 @@
   border-radius: 15px;
 }
 
+@media only screen and (max-width: 768px) {
+  .SearchOverlay {
+    height: calc(var(--vh, 1vh) * 100);
+  }
+}
+
 .container {
   display: flex;
   flex-direction: column;
