--- a/src/pages/Search/Search.module.scss
+++ b/src/pages/Search/Search.module.scss
@@ -15,6 +15,12 @@
   }
 }
 
+@media only screen and (max-width: 768px) {
+  .Search {
+    height: calc(var(--vh, 1vh) * 100);
+  }
+}
+
 .bar {
   @include layout.defaultSidePadding;
   display: flex;
